fixed exception handling, bugs and added comments about testing